# bindings-portaudio

./: .gitignore  CHANGELOG.md  README.md  bindings-portaudio.cabal  extra.c  i386pe.xbn  stack.yaml
.github/workflows/: haskell.yml
Bindings/: PortAudio.hsc
System/: PortAudio.hs
example/: LICENSE  example-portaudio.cabal  sine.hs
portaudio/include/: pa_asio.h
portaudio/src/hostapi/wasapi/: pa_win_wasapi.c
portaudio/src/hostapi/wdmks/: pa_win_wdmks.c
